syntax = "proto3";

package blippy.conversation;

option go_package = "github.com/dstotijn/blippy/internal/conversation";

import "google/protobuf/timestamp.proto";

message Conversation {
  string id = 1;
  string agent_id = 2;
  string title = 3;
  string previous_response_id = 4;  // OpenResponses chaining
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Message {
  string id = 1;
  string conversation_id = 2;
  string role = 3;  // "user", "assistant", "system"
  google.protobuf.Timestamp created_at = 5;
  repeated MessageItem items = 7;
}

message MessageItem {
  oneof item {
    TextItem text = 1;
    ToolExecutionItem tool_execution = 2;
  }
}

message TextItem {
  string content = 1;
}

message ToolExecutionItem {
  string name = 1;
  string input = 2;
  string result = 3;
}

message CreateConversationRequest {
  string agent_id = 1;
}

message GetConversationRequest {
  string id = 1;
}

message ListConversationsRequest {
  string agent_id = 1;  // optional filter
}

message ListConversationsResponse {
  repeated Conversation conversations = 1;
}

message DeleteConversationRequest {
  string id = 1;
}

message GetMessagesRequest {
  string conversation_id = 1;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message ChatRequest {
  string conversation_id = 1;
  string content = 2;
}

message ChatResponse {
  string user_message_id = 1;
}

// WatchEvents streaming events
message WatchEventsRequest {
  string conversation_id = 1;
}

message WatchEventsEvent {
  oneof event {
    TextDelta text_delta = 1;
    ToolResult tool_result = 2;
    MessageCreated message_created = 3;
    WatchError error = 4;
    TurnDone done = 5;
    TurnStarted turn_started = 6;
  }
}

message TextDelta {
  string content = 1;
}

message ToolResult {
  string name = 1;
  string input = 2;
  string result = 3;
}

message MessageCreated {
  Message message = 1;
}

message WatchError {
  string message = 1;
}

message TurnDone {
  string title = 1;
}

message TurnStarted {}

message Empty {}

service ConversationService {
  rpc CreateConversation(CreateConversationRequest) returns (Conversation);
  rpc GetConversation(GetConversationRequest) returns (Conversation);
  rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse);
  rpc DeleteConversation(DeleteConversationRequest) returns (Empty);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc Chat(ChatRequest) returns (ChatResponse);
  rpc WatchEvents(WatchEventsRequest) returns (stream WatchEventsEvent);
}
